// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render the logo 1`] = `
<div>
  <Logo />
  <Connect(Search)
    active={false}
  />
</div>
`;

exports[`<Content /> should render the title 1`] = `
<div>
  <Connect(Title)
    onClick={[Function]}
  />
  <Connect(Search)
    active={false}
  />
</div>
`;
